# cgg

./: .gitmodules  README.md  diffusion_checkpoint.pt  hier_checkpoint.pt  model_checkpoint.pt  pyproject.toml  train.py
scripts/: test.sh  train.sh
src/cgg/: __init__.py  __main__.py  alignment.py  data.py  decode_sample.py  generate_sample.py  graph_utils.py  metrics.py  tests.py  train.py
src/cgg/models/: __init__.py  autoregressive_generator.py  constrained_gvae.py  diffusion_generator.py  discrete_diffusion.py  hierarchical_autoregressive.py  old_constrained_gvae.py  old_discrete_diffusion.py  old_hierarchical_autoregressive.py  shared_encoder.py  types.py  vae_generator.py
