[project]
name = "cgg"
version = "0.1.0"
description = "Code graph generation"
readme = "README.md"
authors = [
    { name = "Bhushan Mohanraj", email = "50306448+bhushan-mohanraj@users.noreply.github.com" },
    { name = "Eric Feng" },
    { name = "Chirag Maheshwari" },
]
requires-python = ">=3.13"
dependencies = [
    "networkx>=3.6",
    "torch>=2.9.1",
    "openai>=1.51.0",
    "zss>=1.2.0",
    "numpy>=2.3.5",
    "torch-geometric>=2.7.0",
    "matplotlib>=3.10.8",
]

[project.scripts]
cgg = "cgg:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]
